--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -12,11 +12,12 @@
     <p><%= @artist.description %></p>
   <% end %>
   <%= button_to "Follow this artist!", {action: "create", :artist_id => @artist.id, :controller => "followed_artists", method: :post}, {class: "btn btn-primary"} %>
+  <h3>Upcoming concerts (<%= @artist.concerts.count %>)</h3>
     <% @artist.concerts.each do |concert|   %>
       <div class="card my-2">
         <div class="card-body">
-          <p><strong>Concert's location: </strong><%= concert.location %></p>
-          <p><strong>Concert's description: </strong><%= concert.description %></p>
+          <p><strong>Title: </strong><%= concert.title %></p>
+          <p><strong>Location: </strong><%= concert.location %></p>
           <p><strong>Date: </strong><%= concert.date %></p>
           <%= link_to "See more", concert_path(concert), class: "btn btn-info" %>
         </div>
