--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -59,6 +59,10 @@
           <div class="z">
             <%= link_to "More info", concert_path(concert), class: "btn-accent" %>
 
+            <%= button_to "Save", {action: "create", :concert_id => concert.id, :controller => "saved_concerts", method: :post}, {class: "btn-accent "} %>
+
+
+
           </div>
         </div>
       </div>
