made all avatars round

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -36,3 +36,10 @@
 .nav-item.dropdown {
   color: $color-accent;
 }
+
+.navbar-avatar {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-color: "#202020";
+}
