image in saved artsits, in the user page, can be clicked

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -170,6 +170,14 @@
         p {
           font-size: 14px;
         }
+
+        a {
+          text-decoration: none;
+          text-align: center;
+          color: white;
+          color: #161616;
+          font-weight: bold;
+        }
       }
 
       .art {
