--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 <div class="layout-container-profile">
     <div class="banner-one">
       <h1 class="text-center">My Profile</h1>
+      <%= link_to 'Sign in with Spotify', '/auth/spotify', method: :post %>
     </div>
 
   <div class="profile-container">
