Added spotify button, and fixed followed artist bug on index and user show

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -397,3 +397,17 @@
   background-color: rgb(165, 17, 17);
 
 }
+
+.spotify-btn {
+  background-color: #1DB954;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+}
+
+.profile-container .user-component .spotify-btn a {
+  background-color: #1DB954;
+  font-weight: 500;
+  color: white;
+}
