added if statement for when there is no upcoming concerts of the artist

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -25,9 +25,9 @@
           <% end %>
       </div>
 
-          <div class="artist-follow-show">
-      <%= button_to "Follow", {action: "create", :artist_id => @artist.id, :controller => "followed_artists", method: :post}, {class: "btn-accent"} %>
-    </div>
+      <div class="artist-follow-show">
+        <%= button_to "Follow", {action: "create", :artist_id => @artist.id, :controller => "followed_artists", method: :post}, {class: "btn-accent"} %>
+      </div>
 
     </div>
 
@@ -38,9 +38,12 @@
 
 
   <div class="artist-concerts-container">
-    <h3>NEXT CONCERTS</h3>
 
-
+    <% if @artist.concerts.empty? %>
+      <h3>No upcoming concerts...</h3>
+    <% else %>
+      <h3>NEXT CONCERTS</h3>
+    <% end %>
 
 
     <% @artist.concerts.each do |concert|   %>
