--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -44,10 +44,10 @@
 
 .second-banner {
   width: 100%;
-  min-height: 170vh;
+  min-height: 110vh;
   background-color: #0D0D0D;
   position: relative;
-  padding: 150px;
+  padding: 110px;
   padding-top: 230px;
 
 
@@ -84,22 +84,33 @@
 }
 
 .home-links {
-  margin-top: 100px;
+  margin-top: 0px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   padding: 0px 200px;
+  height: 200px;
+  width: 100%;
+  margin-bottom: 100px;
+
   .btn-ghost {
     background-color: #0D0D0D;
     color: $color-accent;
     border: 1px solid $color-accent;
-    border-radius: 20px;
-    padding: 5px 30px;
+    border-radius: 10px;
+    padding: 70px 70px;
     transition: all ease-in-out 0.25s;
+    font-size: 30px;
+
   }
   .btn-ghost:hover {
     background-color: $color-accent;
     color: #0D0D0D ;
     box-shadow: 0px 0px 40px rgba(25, 156, 173, 0.438);
   }
+}
+
+.s {
+  color: whitesmoke;
+  font-size: 20px;
 }
