--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -13,7 +13,7 @@
   <div class="artist-information">
     <div class="artist-description-show-container">
       <div class="artist-genres-show">
-        <% @artist.genres.each do |genre| %>
+        <% @artist.genres.first(6).each do |genre| %>
           <p class="artist-genre-list"><%= genre.name %></p>
         <% end %>
       </div>
@@ -21,7 +21,9 @@
       <div class="artist-description-show">
 
           <% if @artist.description %>
-            <p> <%= @artist.description %> </p>
+            <% last_space_index = @artist.description.slice(0, 120).rindex(" ") %>
+            <p><%= @artist.description.slice(0, last_space_index) ... %></p>
+
           <% end %>
       </div>
 
