--- a/app/assets/stylesheets/pages/_concerts_index.scss
+++ b/app/assets/stylesheets/pages/_concerts_index.scss
@@ -1,12 +1,13 @@
 
 
 .concerts-layout {
-  padding: 50px;
+  padding: 20px 150px;
   background-color: rgb(20, 20, 20);
 
   .banner-one {
     .text-center {
       margin: 0;
+      padding: 50px 0px;
     }
   }
 }
@@ -74,11 +75,13 @@
   position: relative;
   box-shadow: 0px 0px 30px rgb(15, 15, 15);
   transition: all ease-in-out 0.2s;
+  opacity: 0.6;
 
 }
 .item:hover {
   // box-shadow: 0px 0px 5px #1c979179;
-  transform: scale(1.02);
+  transform: scale(1.03);
+  opacity: 1;
 
 }
 
@@ -156,10 +159,12 @@
 
   a {
     color: #17615de0;
+    color: black;
 
   }
   span {
     color: #17615de0;
+    color: black;
 
 
   }
