--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -139,7 +139,7 @@
     }
 
 
-    .concert-profile-card {
+    a.concert-profile-card {
       width: 220px;
       height: 60px;
       font-size: 12px;
@@ -153,6 +153,7 @@
       border-radius: 5px;
       // transition: all ease-in-out 0.3s;
       // color: white;
+      text-decoration: none;
       .dt {
         padding: 2px 5px;
         text-align: center;
@@ -161,6 +162,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-decoration: none;
 
         h4 {
           font-size: 18px;
@@ -280,7 +282,7 @@
       padding-top: 10px;
     }
 
-    .artist-card-profile {
+    a.artist-card-profile {
       width: 150px;
       height: 150px;
       display: flex;
@@ -289,6 +291,17 @@
       flex-direction: column;
       // position: relative;
       transition: all ease-in-out 0.2s;
+      text-decoration: none;
+      color: white;
+      text-align: center;
+      background-color: #202020;
+      padding: 0px 5px;
+      margin: 0;
+      transition: all ease-in-out 0.2s;
+
+      a:hover {
+        color: $color-accent;
+      }
 
       img {
         width: 100px;
@@ -308,24 +321,30 @@
         text-align: center;
         line-height: 1.5rem;
 
-        a {
-          text-decoration: none;
-          color: white;
-          text-align: center;
-          background-color: #202020;
-          padding: 0px 5px;
-          margin: 0;
-          transition: all ease-in-out 0.2s;
-        }
+        // a {
+        //   text-decoration: none;
+        //   color: white;
+        //   text-align: center;
+        //   background-color: #202020;
+        //   padding: 0px 5px;
+        //   margin: 0;
+        //   transition: all ease-in-out 0.2s;
+        // }
 
-        a:hover {
-          color: $color-accent;
-        }
+        // a:hover {
+        //   color: $color-accent;
+        // }
       }
     }
 
     .artist-card-profile:hover {
       transform: translateY(-5px);
+      color: rgb(12, 128, 136);
+
+      a {
+        color: rgb(12, 128, 136);
+
+      }
     }
   }
 
