--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -19,11 +19,10 @@
       </div>
 
       <div class="artist-description-show">
-
           <% if @artist.description %>
-            <% last_space_index = @artist.description.slice(0, 300).rindex(" ") %>
-            <p><%= @artist.description.slice(0, last_space_index) ... %></p>
-
+            <% description = @artist.description %>
+            <% cleaned_description = description.slice(0, description.index("<a")) %>
+            <p><%= cleaned_description %></p>
           <% end %>
       </div>
 
