--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,11 +30,63 @@
 
 
 
+
+
+
+
     <%# <p class="text-center s">Search by...</p> %>
 
     <div class="home-links">
       <%= link_to "CONCERTS", concerts_path, class: "btn btn-ghost" %>
       <%= link_to "ARTISTS", artists_path, class: "btn btn-ghost" %>
+    </div>
+
+
+
+    <h3 class="text-center s">Checkout these concerts!</h5>
+
+    <div class="home-concerts">
+
+      <% @concerts.each do |concert|   %>
+        <div class="card-concert">
+          <div class="card-img">
+
+            <% if concert.artist.image_url %>
+              <img src="<%= concert.artist.image_url %>" alt="Artist image">
+            <% else %>
+              <img src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="Artist placeholder image">
+            <% end %>
+
+
+            <p class="img-date"><%= concert.date %></p>
+          </div>
+
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center">
+              <div><p class="card-header mb-2"><%= link_to concert.artist.name, artist_path(concert.artist) %></p></div>
+              <div><p><%= button_to "Save", {action: "create", :concert_id => concert.id, :controller => "saved_concerts", method: :post}, {class: "save"} %></p></div>
+            </div>
+            <p class="card-description"><strong></strong><%= concert.location %></p>
+            <div class="d-flex justify-content-center align-items-center">
+              <button class="btn-accent"><%= link_to "See more", concert_path(concert)%></button>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+
+    <div class="banner-about">
+      <div class="about-left">
+        <h1>About us</h1>
+        <p>Welcome to Concertify! We help people find out when their favorite musicians are playing concerts, by making it easy for you to see live music and find new musicians you might like.<br><br>
+Our website is run by a team of people who love music and want to help others enjoy it too.<br><br>
+You can search for concerts near you and keep track of them on our website. We hope you have fun using our website and discovering new music!</p>
+      </div>
+
+      <div class="about-right">
+        <img src="https://images.unsplash.com/photo-1501386761578-eac5c94b800a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="concert image">
+      </div>
     </div>
 
   </div>
