--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -77,6 +77,8 @@
 
 
   </div>
-  <%= link_to "Go back", root_path, class: "btn-show-back margin-top" %>
+    <div class="back-btn">
+    <%= link_to "Go back", root_path, class: "btn btn-accent" %>
+  </div>
 
 </div>
