--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="show-concert-container">
     <div class="concert-title">
       <h2><%= link_to @concert.artist.name.upcase, artist_path(@concert.artist) %></h2>
-      <p>Concert in <u><%= @concert.date.strftime("%d %B %Y") %></u></p>
+      <p> <%= @concert.date.strftime("%d %B %Y") %></p>
     </div>
 
 
@@ -28,13 +28,13 @@
       <div class="description mb-5">
         <div class="box-left">
           <% last_space_index = @concert.artist.description.slice(0, 360).rindex(" ") %>
-          <p><strong style="color: #39AEA9">ABOUT: </strong><%= @concert.artist.description.slice(0, last_space_index) ... %></p>
-          <p><strong style="color: #39AEA9">WHERE: </strong><%= @concert.location %></p>
-          <p><strong style="color: #39AEA9">WHEN: </strong><%= @concert.date.strftime("%d %B %Y") %></p>
+          <p><strong style="color: #39AEA9"></strong><%= @concert.artist.description.slice(0, last_space_index) ... %></p>
+          <p><strong style="color: #39AEA9"><i class="fa-solid fa-location-dot"></i> </strong><%= @concert.location %> <strong style="color: #39AEA9; padding-left: 30px"><i class="fa-solid fa-calendar-days"></i></strong><%= @concert.date.strftime("%d %B %Y") %></p>
+
         </div>
         <div class="box-right">
           <div class="box-price">
-            <p><strong style="color: #39AEA9">PRICE FROM</strong></p>
+            <p><strong style="color: #39AEA9">STARTING AT</strong></p>
             <% if @concert.price %>
               <p class="price"><%= @concert.price.floor %>€</p>
             <% end %>
@@ -53,7 +53,8 @@
 
   </div>
 
-  <div>
+    <div class="back-btn">
+    <%= link_to "Go back", root_path, class: "btn btn-accent" %>
   </div>
 </div>
 
