--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -53,7 +53,7 @@
 
   </div>
 
-  <div class="back-btn">
-    <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
+    <div class="back-btn">
+    <%= link_to "Go back", root_path, class: "btn btn-accent" %>
   </div>
 </div>
