--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -121,6 +121,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 200px;
+  background-color: #161616;
+  gap: 20px;
 
 
   h1 {
@@ -141,13 +143,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 50px;
+    margin: 20px;
   }
 
   .about-right {
     img {
       width: 500px;
-      height: 300px;
+      height: 100%;
       object-fit: cover;
       border-radius: 5px;
     }
