--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 
 
-      <h1 class="text-center neon-Text">Find your favourite concerts</h1>
+      <h1 class="text-center neon-Text">DOn't miss out on any concerts.</h1>
       <%= form_with url: artists_path, method: :get, class: "d-flex search-form-border my-5" do %>
       <%= text_field_tag :query,
         params[:query],
@@ -43,16 +43,17 @@
 
 
 
-    <h3 class="text-center s">Checkout these concerts!</h5>
+    <h3 class="text-center s">Checkout these concerts!</h3>
 
     <div class="home-concerts">
 
-      <% @concerts.each do |concert|   %>
+      <% @concerts_highlight.each do |artist|  %>
+        <% concert = artist.concerts.first %>
         <div class="card-concert">
           <div class="card-img">
 
-            <% if concert.artist.image_url %>
-              <img src="<%= concert.artist.image_url %>" alt="Artist image">
+            <% if artist.image_url %>
+              <img src="<%= artist.image_url %>" alt="Artist image">
             <% else %>
               <img src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="Artist placeholder image">
             <% end %>
@@ -63,7 +64,7 @@
 
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
-              <div><p class="card-header mb-2"><%= link_to concert.artist.name, artist_path(concert.artist) %></p></div>
+              <div><p class="card-header mb-2"><%= link_to artist.name, artist_path(artist) %></p></div>
 
             </div>
             <p class="card-description"><strong></strong><i class="fa-solid fa-location-dot"></i> <%= concert.location %></p>
