--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -87,12 +87,15 @@
 .home-links {
   margin-top: 0px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  padding: 0px 200px;
-  height: 200px;
-  width: 100%;
+  gap: 20px;
   margin-bottom: 200px;
+
+  .home-links a {
+    display: flex;
+    align-items: center;
+  }
 
   .btn-ghost {
     background-color: #0D0D0D;
@@ -102,7 +105,10 @@
     padding: 70px 70px;
     transition: all ease-in-out 0.25s;
     font-size: 30px;
-
+    width: 300px;
+    height: 200px;
+    display: flex;
+    align-items: center;
   }
   .btn-ghost:hover {
     background-color: $color-accent;
