--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 
 
-      <h1 class="text-center neon-Text">DOn't miss out on any concerts.</h1>
+      <h1 class="text-center neon-Text">DOn't miss out on any concerts!</h1>
       <%= form_with url: artists_path, method: :get, class: "d-flex search-form-border my-5" do %>
       <%= text_field_tag :query,
         params[:query],
