--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -266,6 +266,7 @@
       a {
         text-decoration: none;
         color: $color-accent;
+
       }
     }
 
@@ -313,13 +314,16 @@
       p {
         padding: 0;
         margin: 0;
-        margin-top: -15px;
+        margin-top: -20px;
         font-family: 'Bebas Neue', cursive;
         font-size: 26px;
         // position: absolute;
         // bottom: 10px;
         text-align: center;
-        line-height: 1.5rem;
+        line-height: 1.3rem;
+        background-color: #202020;
+        padding: 5px 10px;
+
 
         // a {
         //   text-decoration: none;
