--- a/app/views/saved_concerts/index.html.erb
+++ b/app/views/saved_concerts/index.html.erb
@@ -10,7 +10,11 @@
 
       <div class="card-concert">
         <div class="card-img">
+        <% if concert.concert.artist.image_url %>
+          <img src="<%= concert.concert.artist.image_url %>" alt="Artist image">
+        <% else %>
           <img src="https://media.istockphoto.com/id/1193274679/photo/excited-crowd-on-a-rock-concert.jpg?s=612x612&w=0&k=20&c=330XDxllhunHf5dt_IwMO2yxPBjXb5j_WMkf_0oWBmU=" alt="concert image">
+        <% end %>
           <p class="img-date"><%= concert.concert.date %></p>
 
         </div>
