--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -14,7 +14,7 @@
 
   <div class="big-box mt-5">
     <div class="masonry-grid">
-      <% @filtered_concerts.each do |concert|   %>
+      <% @one_concert_per_artist.each do |concert|   %>
         <div class="item one masonry-cell">
           <% if concert.artist.image_url %>
             <img src="<%= concert.artist.image_url %>" alt="Concert image", class="item-1-img">
