adjusted styling for buttons

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -53,7 +53,7 @@
 
   </div>
 
-    <div class="back-btn">
+    <div class="back-btn-4">
     <%= link_to "Go back", root_path, class: "btn btn-accent" %>
   </div>
 </div>
