--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -52,8 +52,7 @@
       </div>
 
   </div>
-
-    <div class="back-btn">
+    <div class="back-btn-3">
     <%= link_to "Go back", root_path, class: "btn btn-accent" %>
   </div>
 </div>
