--- a/app/assets/stylesheets/pages/_artists_index.scss
+++ b/app/assets/stylesheets/pages/_artists_index.scss
@@ -163,6 +163,7 @@
   }
 
 }
+
 .artist-card-btn {
   position: absolute;
   right: 10px;
@@ -188,6 +189,7 @@
   }
 
 }
+
 .back-btn {
   display: flex;
   justify-content: center;
@@ -200,5 +202,43 @@
   a {
     width: 150px;
     margin-bottom: 150px;
+  }
+}
+
+.back-btn-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+
+  a {
+    width: 150px;
+  }
+}
+
+.back-btn-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  background-color: #161616;
+
+  a {
+    width: 150px;
+  }
+}
+
+.back-btn-4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #161616;
+
+  a {
+    width: 150px;
   }
 }
