--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -74,7 +74,7 @@
 
 
   </div>
-    <div class="back-btn">
+    <div class="back-btn-2">
     <%= link_to "Go back", root_path, class: "btn btn-accent" %>
   </div>
 
