--- a/app/views/followed_artists/index.html.erb
+++ b/app/views/followed_artists/index.html.erb
@@ -31,7 +31,7 @@
     <% end %>
   </div>
 
-  <div>
-    <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
+  <div class="back-btn-2">
+    <%= link_to "Go back", root_path, class: "btn btn-accent" %>
   </div>
 </div>
