Added option to unfollow artists on index

--- a/app/views/followed_artists/index.html.erb
+++ b/app/views/followed_artists/index.html.erb
@@ -18,7 +18,9 @@
           <% end %>
         </div>
         <div class="artist-card-body">
-          <h2><%= link_to "#{artist.artist.name}", artist_path(artist.artist)%></h2>
+        <h2><%= link_to "#{artist.artist.name}", artist_path(artist.artist)%></h2>
+          <%= button_to "Unfollow", {:controller => :followed_artists,
+              :action => 'destroy', :id => artist.artist.id, :source => :followed_artists }, :method => :delete, class: "btn-accent my-2 w-50" %>
           <% if artist.artist.description %>
             <% last_space_index = artist.artist.description.slice(0, 120).rindex(" ") %>
             <%= artist.artist.description.slice(0, last_space_index) ... %></p>
