--- a/app/assets/stylesheets/pages/_artists_index.scss
+++ b/app/assets/stylesheets/pages/_artists_index.scss
@@ -95,7 +95,7 @@
 .artist-card-img  {
   background-color: lightcoral;
   width: 200px;
-  height: 150px;
+  height: 100%;
   border-radius: 10px;
   margin-right: 15px;
 
