--- a/app/assets/stylesheets/pages/_concert_show.scss
+++ b/app/assets/stylesheets/pages/_concert_show.scss
@@ -139,7 +139,7 @@
       font-weight: bold;
     }
     .box-save {
-      background-color: rgb(223, 109, 109);
+      background-color: #4fccc6;
       // border: 2px solid  rgb(223, 109, 109);
       button {
         background-color: transparent;
