Changed hover color from red to cyan for concert save btn

--- a/app/assets/stylesheets/pages/_concert_show.scss
+++ b/app/assets/stylesheets/pages/_concert_show.scss
@@ -139,7 +139,7 @@
       font-weight: bold;
     }
     .box-save {
-      background-color: #4fccc6;
+      background-color: #39AEA9;
       // border: 2px solid  rgb(223, 109, 109);
       button {
         background-color: transparent;
@@ -148,7 +148,7 @@
       }
     }
     .box-save:hover {
-      background-color: rgb(248, 98, 98)
+      background-color: #369793
     }
     .box-buy:hover {
       background-color: #f7ba49;
