--- a/app/assets/stylesheets/pages/_concert_show.scss
+++ b/app/assets/stylesheets/pages/_concert_show.scss
@@ -128,6 +128,8 @@
         font-size: 16px;
         text-decoration: none;
         color: #292929;
+        display: block;
+
       }
     }
     p {
